--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -91,7 +91,7 @@
 * Deployment Examples
 ** xref:depl-examples/minimal-bare-metal.adoc[Minimal Bare Metal]
 ** xref:depl-examples/bare-metal.adoc[Bare Metal with systemd]
-** Ubuntu with Docker Comopse
+** Ubuntu with Docker Compose
 *** xref:depl-examples/ubuntu-compose/ubuntu-compose-basic.adoc[Basic Setup]
 * Additional Information
 ** xref:additional-information/knowledge-base.adoc[Knowledge Base]
