--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -92,7 +92,7 @@
 ** xref:depl-examples/minimal-bare-metal.adoc[Minimal Bare Metal]
 ** xref:depl-examples/bare-metal.adoc[Bare Metal with systemd]
 ** Ubuntu with Docker Compose
-*** xref:depl-examples/ubuntu-compose/ubuntu-compose-basic.adoc[Basic Setup]
+*** xref:depl-examples/ubuntu-compose/ubuntu-compose-test.adoc[Test Setup]
 * Additional Information
 ** xref:additional-information/knowledge-base.adoc[Knowledge Base]
 
