add activitylog service

--- a/modules/ROOT/pages/deployment/services/s-list/frontend.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/frontend.adoc
@@ -119,6 +119,7 @@ include::partial$multi-location/event-bus.adoc[]
 
 == Caching
 
+// renders dependent on is_cache or is_stat
 :is_cache: true
 
 include::partial$multi-location/caching-list.adoc[]
