--- a/modules/ROOT/pages/deployment/services/ports-used.adoc
+++ b/modules/ROOT/pages/deployment/services/ports-used.adoc
@@ -42,7 +42,7 @@ The following port ranges are used by services:
 | 9180-9184  | FREE
 | 9185-9189  | xref:{s-path}/thumbnails.adoc[thumbnails]
 | 9190-9194  | xref:{s-path}/settings.adoc[settings]
-| 9195-9197  | FREE
+| 9195-9197  | xref:{s-path}/activitylog.adoc[activitylog]
 | 9198-9199  | xref:{s-path}/auth-service.adoc[auth-service]
 | 9200-9204  | xref:{s-path}/proxy.adoc[proxy]
 | 9205-9209  | xref:{s-path}/proxy.adoc[proxy]
