--- a/modules/ROOT/pages/deployment/services/s-list/eventhistory.adoc
+++ b/modules/ROOT/pages/deployment/services/s-list/eventhistory.adoc
@@ -22,6 +22,7 @@ The `eventhistory` services consumes all events from the configured event system
 
 === Storing
 
+// renders dependent on is_cache or is_stat
 :is_stat: true
 
 include::partial$multi-location/caching-list.adoc[]
