--- a/modules/ROOT/partials/nav.adoc
+++ b/modules/ROOT/partials/nav.adoc
@@ -29,6 +29,7 @@
 **** xref:deployment/services/ports-used.adoc[Ports Used]
 **** xref:deployment/services/tls.adoc[Transport Layer Security]
 *** List of Services
+**** xref:deployment/services/s-list/activitylog.adoc[Activitylog]
 **** xref:deployment/services/s-list/antivirus.adoc[Antivirus]
 **** xref:deployment/services/s-list/app-provider.adoc[App Provider]
 **** xref:deployment/services/s-list/app-registry.adoc[App Registry]
